# nfl-draft-prediction

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: gradio_app.py  modal_app.py
docs/: IMPLEMENTATION_PLAN.md  extract.md  final-plan.md
docs/explanations/: phase0_explanations.md  phase_a_step1_explanation.md  phase_a_step2_explanation.md  phase_a_step3_explanation.md  phase_b_explanation.md  phase_c_step1_explanation.md  phase_c_step2_explanation.md  phase_d_step1_explanation.md  phase_d_step2_explanation.md  phase_d_step3_explanation.md  phase_e_explanation.md
experiments/: phase0_lgbm.py  phase1_lgbm.py  phase2_ensemble.py  phase3_final.py
src/nfl_draft/: config.py
src/nfl_draft/data/: load.py
src/nfl_draft/features/: build.py
src/nfl_draft/models/: explain.py  predict.py  train.py
src/nfl_draft/tracking/: experiments.py
tests/: test_features.py  test_predict.py
