[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-draft-prediction"
version = "0.1.0"
description = "LightGBM + CatBoost ensemble predicting NFL Draft selection from combine data."
requires-python = ">=3.11"
dependencies = [
    "lightgbm==4.6.0",
    "catboost==1.2.10",
    "optuna==4.9.0",
    "scikit-learn==1.9.0",
    "pandas==3.0.3",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "joblib==1.5.3",
    "shap==0.51.0",
    "matplotlib==3.10.9",
    "wandb==0.28.0",
    "python-dotenv==1.2.2",
]

# Dev/test-only tools, installed with: pip install -e ".[dev]"
[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
]

# Tells setuptools our code lives under src/ (the "src layout").
[tool.setuptools.packages.find]
where = ["src"]

# Let pytest find the tests/ directory from the project root.
[tool.pytest.ini_options]
testpaths = ["tests"]